# Aero

./: .clang-format  .gitignore  .ruff.toml  CMakeLists.txt  LICENSE  README.md
cases/: README.md  naca0012_2d.yaml  naca0012_euler_2d.yaml  naca0012_euler_2d_aoa_sweep.yaml  naca0012_sweep.yaml  scalar_advect_demo.yaml  wing3d_baseline.yaml
cmake/toolchains/: README.md
docs/: README.md  developer_guide.md  low_mach_preconditioning.md  project_outline.md  validation_plan.md
python/: cfd_core.py  pyproject.toml  setup.py
python/cfd/: __init__.py  _core.pyi  case.py  cli.py  post.py  sweep.py  ui_streamlit.py
python/wheel/: __init__.py  wheelfile.py
scripts/: build_cpu.sh  build_cuda.sh  format_all.sh  run_regression.sh
src/apps/: cfd_cli.cpp
src/cfd_core/: CMakeLists.txt
src/cfd_core/bindings/: CMakeLists.txt  pybind_module.cpp
src/cfd_core/cuda/: CMakeLists.txt  cuda_backend.cu  euler_kernels.cu  kernels.cu  kernels.cuh
src/cfd_core/include/cfd_core/: backend.hpp  cuda_backend.hpp  geometry.hpp  io_vtk.hpp  mesh.hpp  solver.hpp  version.hpp
src/cfd_core/io/: io_vtk_stub.cpp
src/cfd_core/mesh/: airfoil_mesh.cpp  mesh.cpp
src/cfd_core/numerics/: euler_flux.cpp  reconstruction.cpp  residual_stub.cpp
src/cfd_core/post/: forces.cpp
src/cfd_core/solvers/: euler_solver.cpp
tests/cpp/: test_euler_aoa0_regression.cpp  test_euler_low_mach_asymptotic.cpp  test_euler_parity.cpp  test_euler_regression.cpp  test_euler_uniform_invariance.cpp  test_euler_wall_sanity.cpp  test_scalar_parity.cpp  test_smoke.cpp
tests/python/: test_import.py
(+19 files in other folders)
